<resources>
    <!-- Text of TownNews Activity -->
    <string name="app_name">TownNews</string>
    <string name="empty" />
    <string name="no_news">Currently no news available!</string>
    <string name="noInternet">please check your Internet Connection.</string>
    <string name="section_name">sectionName</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="author">Author</string>

    <!-- Setting Activity -->
    <string name="settings_title">TownNews Settings</string>
    <string name="settings_menu_item">Settings</string>

    <!-- Label for search option [CHAR LIMIT=20] -->
    <string name="settings_search_label">Search</string>
    <string name="settings_search_key" translatable="false">what do you looking for?</string>
    <string name="settings_search_default" translatable="false">""</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>

    <!-- Label for order-by option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for result quantity option [CHAR LIMIT=20] -->
    <string name="settings_number_of_results_label">How many News Results to display</string>
    <string name="settings_number_of_results_key" translatable="false">max_results</string>
    <string name="settings_number_of_results_default" translatable="false">10</string>

</resources>
