<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/settings_search_default"
        android:key="@string/settings_search_key"
        android:title="@string/settings_search_label"/>

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_number_of_results_default"
        android:inputType="number"
        android:key="@string/settings_number_of_results_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_number_of_results_label" />
</PreferenceScreen>