<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:baselineAligned="false"
    android:id="@+id/list_item">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/marginLeft16dp"
        android:layout_marginStart="@dimen/marginLeft16dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_name"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="22sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/marginLeft16dp"
        android:layout_marginStart="@dimen/marginLeft16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"/>
        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"/>
    </LinearLayout>

</LinearLayout>